# libnetconf2-cpp

./: .zuul.public.yaml  .zuul.yaml  CMakeLists.txt  Doxyfile.in  README.md  config.hpp.in  libnetconf2-cpp.pc.in  project.config
ci/: build.sh  lsan.supp  pre.yaml
include/libnetconf2-cpp/: Context.hpp  Enum.hpp  netconf-client.hpp
src/: Context.cpp  netconf-client.cpp  utils.hpp
tests/: client.cpp  context.cpp  mock_server.cpp  mock_server.hpp  yanglib.hpp
tests/modules/: example-schema.yang
